# luaui

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  CMakeLists.txt  DIRECTORY_STRUCTURE.md  DOCUMENT_STATUS.md  MIGRATION_GUIDE.md  README.md  test_dock.cpp
examples/: 01_basic_window.cpp  02_hello_lua.cpp  03_rendering_demo.cpp  04_animation_demo.cpp  05_offscreen_demo.cpp  CMakeLists.txt
examples/02_mvvm_demo/: MainWindow.cpp  README.md
examples/02_mvvm_demo/mvvm_layouts/: main_window.xml
examples/03_lua_mvvm_demo/: README.md  SimpleXmlLoader.cpp  SimpleXmlLoader.h  XmlLayoutLoader.h  main.cpp
examples/03_lua_mvvm_demo/layouts/: MainView.xml
examples/03_lua_mvvm_demo/scripts/: App.lua  Framework.lua  MainViewModel.lua  ViewModel.lua  ViewModel_clean.lua  ViewModel_min.lua  test_log.lua
examples/06_controls_demo/: CMakeLists.txt  main.cpp
examples/07_layout_demo/: CMakeLists.txt  main.cpp
examples/08_visual_layout_demo/: CMakeLists.txt  main.cpp
examples/09_composite_layout/: CMakeLists.txt  main.cpp
examples/10_advanced_controls/: CMakeLists.txt  main.cpp
examples/11_style_demo/: CMakeLists.txt  main.cpp
examples/12_xml_layout_demo/: MainWindow.cpp  MainWindow.h  README.md  main.cpp
examples/12_xml_layout_demo/layouts/: main_window.xml  test_border.xml  test_grid.xml  test_header.xml  test_minimal.xml  test_simple.xml
examples/13_mvvm_demo/: MainWindow.h  README.md  main.cpp  test_binding.cpp
examples/13_mvvm_demo/layouts/: main_window.xml
examples/13_mvvm_demo/mvvm_layouts/: main_window.xml
examples/13_refactored_arch_demo/: MainWindow.cpp  MainWindow.h  main.cpp
examples/hello_world/: CMakeLists.txt  main.cpp  main.lua
examples/notepad/: CMakeLists.txt  layout.xml  main.cpp
examples/visual_tests/: test_virtualization_simple.lua
samples/01_hello_world/: CMakeLists.txt  layout.xml  main.lua
samples/02_notepad/: CMakeLists.txt  main.cpp  notepad.lua
src/core/: App.cpp  CMakeLists.txt  LuaState.cpp  LuaUI.cpp  ScriptEngine.cpp  Utils.cpp
src/luaui/controls/: Border.cpp  Border.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Control.h  Controls.h  DataGrid.cpp  DataGrid.h  DatePicker.cpp  DatePicker.h  Dialog.cpp  Dialog.h  DockContainer.cpp  DockContainer.h  DockTabGroup.cpp  DockTabGroup.h  FileTree.cpp  FileTree.h  Image.cpp  Image.h  ListBox.cpp  ListBox.h  Menu.cpp  Menu.h  Notification.cpp  Notification.h  Panel.cpp  Panel.h  ProgressBar.cpp  ProgressBar.h  RichTextBox.cpp  RichTextBox.h  Shapes.cpp  Shapes.h  SideBar.cpp  (+22 more)
src/luaui/controls/include/: CheckableControls.h  Control.h  Event.h  FocusManager.h  Image.h  RangeControls.h  SelectorControls.h  TextInput.h
src/luaui/controls/layout/: CMakeLists.txt
src/luaui/controls/layouts/: CMakeLists.txt  Canvas.cpp  Canvas.h  DockPanel.cpp  DockPanel.h  Grid.cpp  Grid.h  LayoutPanel.cpp  Layouts.h  ScrollViewer.cpp  ScrollViewer.h  StackPanel.cpp  Viewbox.cpp  Viewbox.h  WrapPanel.cpp  WrapPanel.h  layout.h
src/luaui/controls/src/: CheckableControls.cpp  Control.cpp  Event.cpp  FocusManager.cpp  Image.cpp  RangeControls.cpp  SelectorControls.cpp  Shapes.cpp  TextInput.cpp
src/luaui/core/: CMakeLists.txt  Control.cpp  Control.h  Delegate.h  Dispatcher.cpp  Dispatcher.h  Window.cpp  Window.h
src/luaui/core/Components/: Component.cpp  Component.h  InputComponent.cpp  InputComponent.h  (+4 more)
src/luaui/input/: CMakeLists.txt
src/luaui/layout/: CMakeLists.txt
src/luaui/mvvm/: BindingEngine.cpp  BindingEngine.h  CMakeLists.txt  Converters.h  IBindable.h  INotifyCollectionChanged.h  MVVM.h  MvvmXmlLoader.cpp  MvvmXmlLoader.h  ViewModelBase.cpp  ViewModelBase.h  XmlBindingExtension.cpp  XmlBindingExtension.h
src/luaui/rendering/: CMakeLists.txt  DirtyRegion.cpp  DirtyRegion.h  IAnimation.h  IBrush.h  IRenderEngine.h  ResourceCache.cpp  ResourceCache.h
src/luaui/resources/: CMakeLists.txt
src/luaui/scripting/: CMakeLists.txt
src/luaui/style/: CMakeLists.txt  ResourceDictionary.cpp  ResourceDictionary.h  Setter.cpp  Setter.h  Style.cpp  Style.h  Theme.cpp  Theme.h  ThemeKeys.h  ThemeLoader.cpp  ThemeLoader.h  Trigger.cpp  Trigger.h
src/luaui/styling/: CMakeLists.txt
src/luaui/ui/: CMakeLists.txt
src/luaui/utils/: CMakeLists.txt  Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h
src/luaui/xml/: CMakeLists.txt  TypeConverter.cpp  XmlLayout.h  XmlLoader.cpp
tests/: CMakeLists.txt  TestFramework.h  simple_test.cpp  test_controls_extended.cpp  test_core_control.cpp  test_core_delegates.cpp  test_e2e_integration.cpp  test_events.cpp  test_layout.cpp  test_layout_grid.cpp  test_logger.cpp  test_lua_binding.cpp  test_main.cpp  test_mvvm_binding.cpp  test_rendering.cpp  test_rendering_resources.cpp  test_style_system.cpp  test_textbox_editing.cpp  test_xml_integration.cpp
tests/fixtures/: dashboard.xml  login_form.xml  mvvm_binding.xml  simple_button.xml  test_viewmodel.lua
tests/ui_automation/: ARCHITECTURE.md  ControlFinder.cpp  D2DOffscreenCapture.cpp  InputSimulator.cpp  LayoutTester.cpp  PixelComparator.cpp  PixelComparator.h  README.md  SimpleControlsDemoTest.cpp  TestHooks.h  UIAssert.cpp  UIAutomationFramework.h  UIAutomationRunner.cpp  main.cpp
tests/ui_automation/examples/: ButtonClickTest.cpp  ControlsDemo_Test.cpp  ControlsDemo_TestRunner.cpp  ControlsDemo_Test_Detailed.cpp  ControlsDemo_Test_README.md  ControlsDemo_Test_Simple.cpp  LayoutTest.cpp  MVVM_BindingTest.cpp  VisualRegressionTest.cpp
tests/visual/: LuaMvvmTestHost.cpp  LuaMvvmTestHost.h  main_console.cpp  main_lua_mvvm.cpp
tests/visual/layouts/: CanvasTest.xml  DockLayoutTest.xml  DockPanelTest.xml  GridTest.xml  ScrollViewerTest.xml  StackPanelTest.xml  TestRunner.xml  TestRunner_Simple.xml  ViewboxTest.xml  VirtualizationTest.xml  WrapPanelTest.xml
tests/visual/scripts/: CanvasTestViewModel.lua  DockLayoutTestViewModel.lua  DockPanelTestViewModel.lua  GridTestViewModel.lua  ScrollViewerTestViewModel.lua  StackPanelTestViewModel.lua  TestRunnerViewModel.lua  ViewboxTestViewModel.lua  VirtualizationTestViewModel.lua  WrapPanelTestViewModel.lua
(+253 files in other folders)
